--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ jdk:
   - oraclejdk7
 
 language: java
-script: "java -jar BuildTools.jar"
+script: "java -jar BuildTools.jar -Xmx2G"
 after_success: "cp bukkit-* bukkit-new.jar; cp spigot-* spigot-new.jar"
 
 deploy:
